feat: update favicon and title in index.html for branding consistency

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/cars.svg" />
+  <link rel="icon" type="image/svg+xml" href="/luigi.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi colección de Cars</title>
+  <title>Wido's Garage</title>
 </head>
 
 <body>
